--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" th:fragment="parent(content,title,script)" class="dark" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" th:fragment="parent(content,title,script)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:replace="${title}">SCM</title>
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
+    <!-- flowbite cdn -->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="dark:bg-slate-800 dark:text-white">
 
@@ -20,6 +23,7 @@
     <!-- common footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script th:src="@{/js/script.js}"></script>
     <th:block th:replace="${script}"></th:block>
 </body>
 </html>
