Fixed bugs related to provider in user entity and Implemented Message Handling in Signup form

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,6 +13,10 @@
          <div class="md:col-span-8 lg:col-span-6 col-span-12">
             <!-- flowbite card -->
             <div class="block p-6 mt-2 bg-gray-100 border border-gray-200 rounded-2xl shadow-lg dark:bg-gray-700 dark:border-gray-700 dark:hover:bg-gray-700">
+            
+            <!-- alert message -->
+            <div th:replace="~{alert:: alert}"></div>
+            
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-center text-gray-900 dark:text-white">Signup</h5>
             <p class="font-normal text-center text-gray-800 dark:text-gray-300">Start Managing your contacts on cloud...</p>
             <!-- form -->
