--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,31 +20,41 @@
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-center text-gray-900 dark:text-white">Signup</h5>
             <p class="font-normal text-center text-gray-800 dark:text-gray-300">Start Managing your contacts on cloud...</p>
             <!-- form -->
-            <form th:action="@{/do-register}" th:object="${userForm}" method="post" class="mt-6">
+            <form th:action="@{/do-register}" th:object="${userForm}" method="post" class="mt-6" novalidate>
                <!-- name input -->
                <div class="mb-5">
                   <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your name</label>
                   <input type="text" th:field="*{name}" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter your name" required>
+                  <!-- validation -->
+                  <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-red-600 py-2 px-1">Name is required</p>
                </div>
                <!-- email input -->
                <div class="mb-5">
                   <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
                   <input type="email" th:field="*{email}" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@email.com" required />
+                  <!-- validation -->
+                  <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-red-600 py-2 px-1">Email is required</p>
                </div>
                <!-- password input -->
                <div class="mb-5">
                   <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your password</label>
                   <input type="password" th:field="*{password}" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter password" required />
+                  <!-- validation -->
+                  <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-red-600 py-2 px-1">Password is required</p>
                </div>
                <!-- phone input -->
                <div class="mb-5">
                   <label for="phoneNumber" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your phone number</label>
                   <input type="tel" th:field="*{phoneNumber}" name="phoneNumber" id="phoneNumber" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="(123)-456-7890" required>
+                  <!-- validation -->
+                  <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="text-red-600 py-2 px-1">Phone number is required</p>
                </div>
                <!-- about input -->
                <div class="mb-5">
                   <label for="about" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Something about you</label>
                   <textarea id="about" th:field="*{about}" name="about" rows="5" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write something..."></textarea>
+                  <!-- validation -->
+                  <p th:if="${#fields.hasErrors('about')}" th:errors="*{about}" class="text-red-600 py-2 px-1">About is required</p>
                </div>
                <!-- submit button -->
                <div class="mb-2 text-center">
