--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,52 @@
 </head>
 <body>
    <div id="content">
-      This is Login page
+      <!-- divides the page in 12 cols -->
+      <div class="grid grid-cols-12">
+         <!-- leave col space of 3 from left -->
+         <div class="md:col-span-2 lg:col-span-3"></div>
+         <!-- col space of 6 in middle -->
+         <div class="md:col-span-8 lg:col-span-6 col-span-12">
+            <!-- flowbite card -->
+            <div class="block p-6 mt-2 bg-gray-100 border border-gray-200 rounded-2xl shadow-lg dark:bg-gray-700 dark:border-gray-700 dark:hover:bg-gray-700">
+            
+            <!-- alert message -->
+            <div th:replace="~{alert:: alert}"></div>
+            
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-center text-gray-900 dark:text-white">Login</h5>
+            <p class="font-normal text-center text-gray-800 dark:text-gray-300">Start Managing your contacts on cloud...</p>
+
+            <div class="text-red-700 my-3 text-center" th:if="${param.error}">
+               Invalid username or password
+            </div>
+            <div class="text-green-600 my-3 text-center" th:if="${param.logout}">
+               You have been logged out.
+            </div>
+
+            <!-- form -->
+            <form method="post" th:action="@{'/authenticate'}" class="mt-6">
+               <!-- username input -->
+               <div class="mb-5">
+                  <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your Username</label>
+                  <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@email.com" required />
+                  <!-- validation -->
+                  <!-- <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-red-600 py-2 px-1">Username is required</p> -->
+               </div>
+               <!-- password input -->
+               <div class="mb-5">
+                  <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your password</label>
+                  <input type="password" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-300 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter password" required />
+                  <!-- validation -->
+                  <!-- <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-red-600 py-2 px-1">Password is required</p> -->
+               </div>
+               <!-- submit button -->
+               <div class="mb-2 text-center">
+                  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
+               </div>
+            </form>
+            </div>
+         </div>
+      </div>
    </div>
 </body>
 </html>
