Implemented Login with Google

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:replace="${title}">SCM</title>
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
+    <link rel="stylesheet" th:href="@{'/css/style.css'}">
     <!-- flowbite cdn -->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
     <!-- font awesome cdn -->
@@ -16,7 +17,7 @@
     <section th:replace="~{navbar:: navbar}"></section>
 
     <!-- Page Content -->
-    <div class="p-9 mt-10 h-screen w-full">
+    <div class="p-9 mt-2 h-screen w-full">
         <section th:replace="${content}"></section>
     </div>
 
