--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -7,5 +7,7 @@
 </head>
 <body>
    <h1>Welcome to User Dashboard</h1>
+   <h1 th:text="${loggedInUser.name}"></h1>
+   <h1 th:text="${loggedInUser.email}"></h1>
 </body>
 </html>
