--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base:: parent(~{::#content}, ~{::title}, ~{})}">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title data-th-text="${loggedInUser.name} + '|Profile'">Profile</title>
 </head>
 <body>
-   <h1>Welcome to user profile page</h1>
-   <h1 th:text="${loggedInUser.name}"></h1>
-   <h1 th:text="${loggedInUser.email}"></h1>
+   <div id="content">
+
+      <!-- sidebar: only if user is logged in -->
+      <th:block th:if="${loggedInUser}">
+         <section th:replace="~{user/sidebar::sidebar}"></section>
+      </th:block>
+
+      <!-- page content -->
+      <div class="sm:pl-64 lg:pt-3 pt-9 sm:pt-16 justify-center flex flex-col items-center">
+         <h1 class="font-bold text-2xl">Welcome to Profile Page</h1>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, temporibus?</p>
+      </div>
+   </div>
 </body>
 </html>
