Implemented Delete Contacts using Proper Alert

--- a/src/main/resources/templates/user/contact_modal.html
+++ b/src/main/resources/templates/user/contact_modal.html
@@ -49,11 +49,19 @@
                               <i class="fa-solid fa-star text-yellow-500"></i>
                            </span>
                         </div>
+                        <div class="flex items-center">
+                           <span><i class="fa-solid fa-earth-americas w-6 h-6"></i></span>
+                           <a id="contact_website" class="ml-2 text-gray-700 dark:text-gray-400">www.google.com</a>
+                        </div>
+                        <div class="flex items-center">
+                           <span><i class="fa-brands fa-linkedin w-6 h-6"></i></span>
+                           <a id="contact_linkedIn" class="ml-2 text-gray-700 dark:text-gray-400">www.linkedIn.com</a>
+                        </div>
                      </div>
                   </div>
                </div>
                <!-- Modal footer -->
-               <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+               <div class="flex items-center justify-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
                   <button data-modal-hide="view_contact_modal" type="button" onclick="closeContactModal()" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                      Close
                   </button>
