--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -31,6 +31,7 @@
     <!-- common footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/script.js}"></script>
     <th:block th:replace="${script}"></th:block>
 </body>
