--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -13,9 +13,12 @@
 
       <!-- page content -->
       <div class="sm:pl-64 lg:pt-3 pt-9 sm:pt-16 justify-center flex flex-col items-center">
+
          <h1 class="font-bold text-2xl">All Your Contacts</h1>
          <p>List of your contacts...</p>
 
+         <!-- alert message -->
+         <div th:replace="~{alert:: alert}"></div>
 
          <!-- table -->
          <div class="contact_container p-6 mt-3 w-full">
@@ -91,7 +94,8 @@
                            </td>
                            <td class="px-6 py-4">
                               <div>
-                                 <i class="fa-solid fa-trash w-6 h-6"></i>
+                                 <!-- <a th:href="@{'/user/contacts/delete/'+${contact.id}}"><i class="fa-solid fa-trash w-6 h-6"></i></a> -->
+                                 <button th:onclick="deleteContact([[${contact.id}]])"><i class="fa-solid fa-trash w-6 h-6"></i></button>
                                  <i class="fa-solid fa-pen w-6 h-6"></i>
                                  <button th:onclick="loadContactData([[${contact.id}]])"><i class="fa-solid fa-eye w-6 h-6"></i></button>
                               </div>
