--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -96,7 +96,7 @@
                               <div>
                                  <!-- <a th:href="@{'/user/contacts/delete/'+${contact.id}}"><i class="fa-solid fa-trash w-6 h-6"></i></a> -->
                                  <button th:onclick="deleteContact([[${contact.id}]])"><i class="fa-solid fa-trash w-6 h-6"></i></button>
-                                 <i class="fa-solid fa-pen w-6 h-6"></i>
+                                 <a th:href="@{'/user/contacts/update/'+${contact.id}}"><i class="fa-solid fa-pen w-6 h-6"></i></a>
                                  <button th:onclick="loadContactData([[${contact.id}]])"><i class="fa-solid fa-eye w-6 h-6"></i></button>
                               </div>
                            </td>
