--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -95,7 +95,7 @@
                            <td class="px-6 py-4">
                               <div>
                                  <button th:onclick="deleteContact([[${contact.id}]])"><i class="fa-solid fa-trash w-6 h-6"></i></button>
-                                 <i class="fa-solid fa-pen w-6 h-6"></i>
+                                 <a th:href="@{'/user/contacts/update/'+${contact.id}}"><i class="fa-solid fa-pen w-6 h-6"></i></a>
                                  <button th:onclick="loadContactData([[${contact.id}]])"><i class="fa-solid fa-eye w-6 h-6"></i></button>
                               </div>
                            </td>
