--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -795,6 +795,10 @@ video {
   height: 100vh;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .max-h-52 {
   max-height: 13rem;
 }
@@ -857,6 +861,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .max-w-2xl {
